Hopton Attack Leningrad Variation

--- a/dutch_defence_hopton_attack.wiki
+++ b/dutch_defence_hopton_attack.wiki
@@ -72,7 +72,7 @@ White develops the Bishop so as to hinder Black's normal Dutch kingside formatio
 | <br>
 | <br>
 | =
-| very common, inbalanced middlegame.
+| very common, unbalanced middlegame.
 |}
 {{ChessMid}}
 {{Wikipedia|Dutch Defence}}
