--- a/dutch_defence_hopton_attack_cherniaev_defence.wiki
+++ b/dutch_defence_hopton_attack_cherniaev_defence.wiki
@@ -1,24 +1,24 @@
 {{Chess Opening Theory/Position|=
-|Dutch Defence, Hopton Attack|
-   |rd|nd|bd|qd|kd|bd|nd|rd|=
+|Hopton Attack, Cherniaev Defence|
+   |rd|  |bd|qd|kd|bd|nd|rd|=
    |pd|pd|pd|pd|pd|  |pd|pd|=
-   |  |  |  |  |  |  |  |  |=
+   |  |  |nd|  |  |  |  |  |=
    |  |  |  |  |  |pd|bl|  |=
    |  |  |  |pl|  |  |  |  |=
    |  |  |  |  |  |  |  |  |=
    |pl|pl|pl|  |pl|pl|pl|pl|=
    |rl|nl|  |ql|kl|bl|nl|rl|=
-|moves=1.d4 f5 2. Bg5
+|moves=1.d4 f5 2. Bg5 Nc6
 |eco=[[Chess/ECOA|A80]]
 |parent=[[Chess/Dutch Defence|Dutch Defence]]
 }}
-= Dutch Defence: Hopton Attack =
-===2. Bg5===
+= Dutch Defence: Hopton Attack, Cherniaev Defence =
+===2. Bg5 Nc6===
 White develops the Bishop so as to hinder Black's normal Dutch kingside formation by pinning the e-pawn. Black now has to choose to either drive the Bishop away or attempt to develop normally, without the help of ...e6. The usual ...Nf6 in Dutch formations can now be replied by Bxf6, foiling the usual setup. If black plays h6, he weakens his kingside.
 
 == Theory table ==
 {{Chess Opening Theory/Table}}
-'''1. d4 f5 2. Bg5'''
+'''1. d4 f5 2. Bg5 Nc6'''
 
 {| class="wikitable" style="text-align: center;"
 |-
