--- a/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
+++ b/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
@@ -8,12 +8,12 @@
    |  |  |  |  |  |nl|  |  |=
    |pl|pl|pl|  |  |pl|pl|pl|=
    |rl|  |  |ql|kl|bl|  |rl|=
-|moves=1.d4 f5 2. Bg5 g6 3.Nc3 Bg7, 4.e4 fxe4, 5.Nxe4 Nf3
+|moves=1.d4 f5 2. Bg5 g6 3.Nc3 Bg7, 4.e4 fxe4, 5.Nxe4 Nc6, 6.Nf3
 |eco=[[Chess/ECOA|A80]]
 |parent=[[Chess/Dutch Defence|Dutch Defence]]
 }}
 = Dutch Defence: Hopton Attack, Leningrad Variation, Modern Variations =
-===3. Nf3===
+===6. Nf3===
 Superficially the positions of white's knights look a bit like in the open Sicilians, except 
 in the Sicilians the knights are look towards the queen side; but here both knights are looking towards king side. 
 White has traded off a center pawn for a side pawn. White has now a lead in development. But black
@@ -25,41 +25,31 @@ Black has noumerous ways to defend. White will have to ajust any attacking plans
 
 == Theory table ==
 {{Chess Opening Theory/Table}}
-'''1. d4 f5 2. Bg5'''
+'''1. d4 f5 2. Bg5 g6 3.Nc3 Bg7, 4.e4 fxe4, 5.Nxe4 Nc6, 6.Nf3'''
 
 {| class="wikitable" style="text-align: center;"
 |-
-! Description !! 2 !! 3 !! 4 !! 5 !! 6 !! 7 !! Evaluation !! Notes
+! Description !! 6 !! 7 !! 8 !! 9 !! 10 !! 11 !! Evaluation !! Notes
 |-
-| '''Leningrad Variation, Normal Variations'''
-| ...<br>g6
-| Nc3<br>d5
-| h4<br>Bg7
-| e3<br>c6
-| e4<br>O-O
-| Nf3<br>Be6
-| =
-| Sharp but flexible setup for Black.
-|-
-| '''Leningrad Variation, Open Variations'''
-| ...<br>g6
-| Nc3<br>Bg7
-| e4<br>fxe4
-| Nxe4<br>...
+| '''Rossmann Variation'''
+| Nf3<br>h6
+| <br>
+| <br>
+| <br>
 | <br>
 | <br>
 | +/=
-| White opens up the board, which leads to sharp and tactical lines. 
+| ...
 |-
-| '''Leningrad Variation, Modern Variations'''
-| ...<br>g6
-| Nc3<br>Bg7
-| e4<br>fxe4
-| Nxe4<br>Nc6
-| Nf6<br>...
+| '''Watson Variation'''
+| Nf3<br>Nf6
+| <br>
+| <br>
+| <br>
+| <br>
 | <br>
 | +/=
-| White gains a lead in development at the cost of weakened center control.
+| ...
 |-
 {{ChessMid}}
 {{Wikipedia|Dutch Defence}}
