Hopton Attack, Leningrad modern variations

--- a/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
+++ b/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
@@ -51,6 +51,16 @@ Black has noumerous ways to defend. White will have to ajust any attacking plans
 | +/=
 | ...
 |-
+| '''Tisy Variation'''
+| Nf3<br>d6
+| <br>
+| <br>
+| <br>
+| <br>
+| <br>
+| +/=
+| ...
+|-
 {{ChessMid}}
 {{Wikipedia|Dutch Defence}}
 
