Hopton Attack, Leningrad modern variations

--- a/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
+++ b/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
@@ -71,6 +71,16 @@ Black has noumerous ways to defend. White will have to ajust any attacking plans
 | +/=
 | ...
 |-
+| '''Coyame Variation'''
+| Nf3<br>Rb8
+| <br>
+| <br>
+| <br>
+| <br>
+| <br>
+| +/=
+| ...
+|-
 {{ChessMid}}
 {{Wikipedia|Dutch Defence}}
 
