Hopton Attack, Leningrad modern variations, Rossmann Variation

--- a/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
+++ b/dutch_defence_hopton_attack_leningrad_var_modern_var.wiki
@@ -1,5 +1,5 @@
 {{Chess Opening Theory/Position|=
-|Hopton Attack, Leningrad Variation|
+|Hopton Attack, Leningrad Variation, Modern Variations|
    |rd|  |bd|qd|kd|  |nd|rd|=
    |pd|pd|pd|pd|pd|  |bd|pd|=
    |  |  |nd|  |  |  |pd|  |=
